// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Export Java Selenide should export a suite 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class LoginTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"chrome\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  @Test
  public void validcredentials() {
    Selenide.open(\\"http://the-internet.herokuapp.com/login\\");
    WebDriverRunner.getWebDriver().manage().window().setSize(new Dimension(1440, 1177));
    $(Selectors.byId(\\"username\\")).val(\\"tomsmith\\");
    $(Selectors.byId(\\"password\\")).val(\\"SuperSecretPassword!\\");
    $(\\"#login button\\").click();
    $(\\".flash.success\\").shouldHave(text(\\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"));
  }
  @Test
  public void invalidcredentials() {
    Selenide.open(\\"http://the-internet.herokuapp.com/login\\");
    WebDriverRunner.getWebDriver().manage().window().setSize(new Dimension(1440, 1177));
    $(Selectors.byId(\\"username\\")).val(\\"blah\\");
    $(Selectors.byId(\\"password\\")).val(\\"blah\\");
    $(\\"#login button\\").click();
    $(Selectors.byId(\\"flash\\")).shouldHave(text(\\"Your username is invalid!\\\\\\\\\\\\\\\\n×\\"));
  }
}
"
`;

exports[`Code Export Java Selenide should export a suite that uses control flow commands 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class ControlflowTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"chrome\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  @Test
  public void controlflowif() {
    vars.put(\\"myVar\\", Selenide.executeJavaScript(\\"return 'a'\\"));
    if ((Boolean) Selenide.executeJavaScript(\\"return (arguments[0] === 'a')\\", vars.get(\\"myVar\\"))) {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'a'\\"));
    } else if ((Boolean) Selenide.executeJavaScript(\\"return (arguments[0] === 'b')\\", vars.get(\\"myVar\\"))) {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'b'\\"));
    } else {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'c'\\"));
    }
    assertEquals(vars.get(\\"output\\").toString(), \\"a\\");
  }
  @Test
  public void controlflowelseif() {
    vars.put(\\"myVar\\", Selenide.executeJavaScript(\\"return 'b'\\"));
    if ((Boolean) Selenide.executeJavaScript(\\"return (arguments[0] === 'a')\\", vars.get(\\"myVar\\"))) {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'a'\\"));
    } else if ((Boolean) Selenide.executeJavaScript(\\"return (arguments[0] === 'b')\\", vars.get(\\"myVar\\"))) {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'b'\\"));
    } else {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'c'\\"));
    }
    assertEquals(vars.get(\\"output\\").toString(), \\"b\\");
  }
  @Test
  public void controlflowelse() {
    vars.put(\\"myVar\\", Selenide.executeJavaScript(\\"return 'c'\\"));
    if ((Boolean) Selenide.executeJavaScript(\\"return (arguments[0] === 'a')\\", vars.get(\\"myVar\\"))) {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'a'\\"));
    } else if ((Boolean) Selenide.executeJavaScript(\\"return (arguments[0] === 'b')\\", vars.get(\\"myVar\\"))) {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'b'\\"));
    } else {
      vars.put(\\"output\\", Selenide.executeJavaScript(\\"return 'c'\\"));
    }
    assertEquals(vars.get(\\"output\\").toString(), \\"c\\");
  }
  @Test
  public void controlflowdo() {
    vars.put(\\"check\\", Selenide.executeJavaScript(\\"return 1\\"));
    do {
      vars.put(\\"check\\", Selenide.executeJavaScript(\\"return arguments[0] + 1\\", vars.get(\\"check\\")));
    } while ((Boolean) Selenide.executeJavaScript(\\"return (arguments[0] < 3)\\", vars.get(\\"check\\")));
    assertEquals(vars.get(\\"check\\").toString(), \\"3\\");
  }
  @Test
  public void controlflowtimes() {
    vars.put(\\"check\\", Selenide.executeJavaScript(\\"return 1\\"));
    Integer times = 2;
    for(int i = 0; i < times; i++) {
      vars.put(\\"check\\", Selenide.executeJavaScript(\\"return arguments[0] + 1\\", vars.get(\\"check\\")));
    }
    assertEquals(vars.get(\\"check\\").toString(), \\"3\\");
  }
  @Test
  public void controlflowwhile() {
    vars.put(\\"check\\", Selenide.executeJavaScript(\\"return 1\\"));
    while ((Boolean) Selenide.executeJavaScript(\\"return (arguments[0] < 3)\\", vars.get(\\"check\\"))) {
      vars.put(\\"check\\", Selenide.executeJavaScript(\\"return arguments[0] + 1\\", vars.get(\\"check\\")));
    }
    assertEquals(vars.get(\\"check\\").toString(), \\"3\\");
  }
}
"
`;

exports[`Code Export Java Selenide should export a suite with a reused test method 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class LoginTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"chrome\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  public void login() {
    Selenide.open(\\"https://the-internet.herokuapp.com/\\");
    $(Selectors.byLinkText(\\"Form Authentication\\")).click();
    $(Selectors.byId(\\"username\\")).val(vars.get(\\"username\\").toString());
    $(Selectors.byId(\\"password\\")).val(vars.get(\\"password\\").toString());
    $(\\".fa\\").click();
  }
  @Test
  public void invalidcredentials() {
    vars.put(\\"username\\", \\"blah\\");
    vars.put(\\"password\\", \\"blah\\");
    login();
  }
  @Test
  public void validcredentials() {
    vars.put(\\"username\\", \\"tomsmith\\");
    vars.put(\\"password\\", \\"SuperSecretPassword!\\");
    login();
  }
}
"
`;

exports[`Code Export Java Selenide should export a suite with commands that open a new window inside of a reused test method 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class DefaultSuiteTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"chrome\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  public String waitForWindow(int timeout) {
    Selenide.sleep(timeout);
    Set<String> whNow = WebDriverRunner.getWebDriver().getWindowHandles();
    Set<String> whThen = (Set<String>) vars.get(\\"window_handles\\");
    if (whNow.size() > whThen.size()) {
      whNow.removeAll(whThen);
    }
    return whNow.iterator().next();
  }
  public void selectwindow() {
    Selenide.open(\\"http://the-internet.herokuapp.com/windows\\");
    vars.put(\\"window_handles\\", WebDriverRunner.getWebDriver().getWindowHandles());
    $(Selectors.byLinkText(\\"Click Here\\")).click();
    vars.put(\\"win9425\\", waitForWindow(2000));
    Selenide.switchTo().window(vars.get(\\"win9425\\").toString());
    assertEquals(Selenide.title(), \\"New Window\\");
  }
  @Test
  public void reuse() {
    selectwindow();
  }
}
"
`;

exports[`Code Export Java Selenide should export a suite with just one new window util method when there are multiple commands that open a new window 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class DefaultSuiteTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"chrome\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  public String waitForWindow(int timeout) {
    Selenide.sleep(timeout);
    Set<String> whNow = WebDriverRunner.getWebDriver().getWindowHandles();
    Set<String> whThen = (Set<String>) vars.get(\\"window_handles\\");
    if (whNow.size() > whThen.size()) {
      whNow.removeAll(whThen);
    }
    return whNow.iterator().next();
  }
  public void selectwindow() {
    Selenide.open(\\"http://the-internet.herokuapp.com/windows\\");
    vars.put(\\"window_handles\\", WebDriverRunner.getWebDriver().getWindowHandles());
    $(Selectors.byLinkText(\\"Click Here\\")).click();
    vars.put(\\"win9425\\", waitForWindow(2000));
    Selenide.switchTo().window(vars.get(\\"win9425\\").toString());
    assertEquals(Selenide.title(), \\"New Window\\");
  }
  @Test
  public void reuse() {
    selectwindow();
  }
  @Test
  public void selectwindow() {
    Selenide.open(\\"http://the-internet.herokuapp.com/windows\\");
    vars.put(\\"window_handles\\", WebDriverRunner.getWebDriver().getWindowHandles());
    $(Selectors.byLinkText(\\"Click Here\\")).click();
    vars.put(\\"win9425\\", waitForWindow(2000));
    Selenide.switchTo().window(vars.get(\\"win9425\\").toString());
    assertEquals(Selenide.title(), \\"New Window\\");
  }
}
"
`;

exports[`Code Export Java Selenide should export a test 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class LoginTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"chrome\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  @Test
  public void login() {
    Selenide.open(\\"http://the-internet.herokuapp.com/login\\");
    WebDriverRunner.getWebDriver().manage().window().setSize(new Dimension(1440, 1177));
    $(Selectors.byId(\\"username\\")).val(\\"tomsmith\\");
    $(Selectors.byId(\\"password\\")).val(\\"SuperSecretPassword!\\");
    $(\\"#login button\\").click();
    $(\\".flash.success\\").shouldHave(text(\\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"));
  }
}
"
`;

exports[`Code Export Java Selenide should export a test with a grid configuration 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class LoginTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"firefox\\";
    Configuration.remote = \\"http://localhost:4444/wd/hub\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  @Test
  public void login() {
    Selenide.open(\\"http://the-internet.herokuapp.com/login\\");
    WebDriverRunner.getWebDriver().manage().window().setSize(new Dimension(1440, 1177));
    $(Selectors.byId(\\"username\\")).val(\\"tomsmith\\");
    $(Selectors.byId(\\"password\\")).val(\\"SuperSecretPassword!\\");
    $(\\"#login button\\").click();
    $(\\".flash.success\\").shouldHave(text(\\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"));
  }
}
"
`;

exports[`Code Export Java Selenide should export a test with a reused test method 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class ValidcredentialsTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"chrome\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  public void login() {
    Selenide.open(\\"https://the-internet.herokuapp.com/\\");
    $(Selectors.byLinkText(\\"Form Authentication\\")).click();
    $(Selectors.byId(\\"username\\")).val(vars.get(\\"username\\").toString());
    $(Selectors.byId(\\"password\\")).val(vars.get(\\"password\\").toString());
    $(\\".fa\\").click();
  }
  @Test
  public void validcredentials() {
    vars.put(\\"username\\", \\"tomsmith\\");
    vars.put(\\"password\\", \\"SuperSecretPassword!\\");
    login();
  }
}
"
`;

exports[`Code Export Java Selenide should export a test with commands that open a new window 1`] = `
"// Generated by Selenium IDE
import org.junit.jupiter.api.Test;
import org.junit.jupiter.api.BeforeAll;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.AfterAll;
import org.junit.jupiter.api.AfterEach;
import com.codeborne.selenide.Configuration;
import com.codeborne.selenide.Selectors;
import com.codeborne.selenide.Selenide;
import com.codeborne.selenide.WebDriverRunner;
import static com.codeborne.selenide.Condition.*;
import static com.codeborne.selenide.Selenide.*;
import static org.junit.jupiter.api.Assertions.*;
import org.openqa.selenium.Dimension;
import org.openqa.selenium.Keys;
import java.util.*;
public class SelectwindowTest {
  private Map<String, Object> vars;
  @BeforeEach
  public void setUp() {
    Configuration.browser = \\"chrome\\";
    vars = new HashMap<>();
  }
  @AfterEach
  public void tearDown() {
  }
  public String waitForWindow(int timeout) {
    Selenide.sleep(timeout);
    Set<String> whNow = WebDriverRunner.getWebDriver().getWindowHandles();
    Set<String> whThen = (Set<String>) vars.get(\\"window_handles\\");
    if (whNow.size() > whThen.size()) {
      whNow.removeAll(whThen);
    }
    return whNow.iterator().next();
  }
  @Test
  public void selectwindow() {
    Selenide.open(\\"http://the-internet.herokuapp.com/\\");
    WebDriverRunner.getWebDriver().manage().window().setSize(new Dimension(1260, 1027));
    $(Selectors.byLinkText(\\"Multiple Windows\\")).click();
    vars.put(\\"window_handles\\", WebDriverRunner.getWebDriver().getWindowHandles());
    $(Selectors.byLinkText(\\"Click Here\\")).click();
    vars.put(\\"win9625\\", waitForWindow(2000));
    vars.put(\\"root\\", WebDriverRunner.getWebDriver().getWindowHandle());
    Selenide.switchTo().window(vars.get(\\"win9625\\").toString());
    assertEquals(Selenide.title(), \\"New Window\\");
    Selenide.switchTo().window(vars.get(\\"root\\").toString());
    assertEquals(Selenide.title(), \\"The Internet\\");
  }
}
"
`;
